[gd_scene load_steps=23 format=3 uid="uid://drkww1wvkafl"]

[ext_resource type="Script" path="res://scenes/util/minion2.gd" id="1_8nn8b"]
[ext_resource type="Texture2D" uid="uid://n6vtdy2fuur0" path="res://assets/Charactersets/NPC christmas.png" id="2_rwtic"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o8xjo"]
radius = 19.0
height = 54.0

[sub_resource type="AtlasTexture" id="AtlasTexture_65mhx"]
atlas = ExtResource("2_rwtic")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvhb6"]
atlas = ExtResource("2_rwtic")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_th058"]
atlas = ExtResource("2_rwtic")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r34n6"]
atlas = ExtResource("2_rwtic")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg7du"]
atlas = ExtResource("2_rwtic")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gerq4"]
atlas = ExtResource("2_rwtic")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8mnh"]
atlas = ExtResource("2_rwtic")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3fu7"]
atlas = ExtResource("2_rwtic")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqxbq"]
atlas = ExtResource("2_rwtic")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrrle"]
atlas = ExtResource("2_rwtic")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pnll"]
atlas = ExtResource("2_rwtic")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdnfc"]
atlas = ExtResource("2_rwtic")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4hlv"]
atlas = ExtResource("2_rwtic")
region = Rect2(96, 336, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pp7d1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_65mhx")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvhb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th058")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r34n6")
}],
"loop": true,
"name": &"walk_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg7du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gerq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8mnh")
}],
"loop": true,
"name": &"walk_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3fu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqxbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrrle")
}],
"loop": true,
"name": &"walk_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pnll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdnfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4hlv")
}],
"loop": true,
"name": &"walk_up",
"speed": 6.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_7aoqx"]

[sub_resource type="Animation" id="Animation_xtfbq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3ip7i"]
resource_name = "speech_buble"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6tmkn"]
resource_name = "speech_bubble_stop"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0lxqj"]
_data = {
"RESET": SubResource("Animation_xtfbq"),
"speech_bubble_start": SubResource("Animation_3ip7i"),
"speech_bubble_stop": SubResource("Animation_6tmkn")
}

[node name="Area2D" type="Area2D"]
script = ExtResource("1_8nn8b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_o8xjo")
debug_color = Color(0, 0.623529, 0.533333, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_pp7d1")
animation = &"idle_right"
autoplay = "walk_right"
flip_h = true

[node name="PanelContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.5
offset_top = -75.0
offset_right = 45.5
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_7aoqx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = -10
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = -10
theme_override_constants/margin_bottom = -10

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Label/MarginContainer"]
layout_mode = 2

[node name="say_timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0lxqj")
}

[node name="NextActionTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="say_timer" to="." method="_on_say_timer_timeout"]
[connection signal="timeout" from="NextActionTimer" to="." method="_on_next_action_timer_timeout"]
